--- a/BaxandallEQ/CMakeLists.txt
+++ b/BaxandallEQ/CMakeLists.txt
@@ -1,4 +1,4 @@
-create_wdf_plugin(BaxandallEQ BaEQ)
+#create_wdf_plugin(BaxandallEQ BaEQ)
 
 target_sources(BaxandallEQ PRIVATE
     src/BaxandallWDF.cpp
